--- a/DB/App.config
+++ b/DB/App.config
@@ -6,6 +6,9 @@
         <add name="DB.Properties.Settings.MarketingDeptConnectionString"
             connectionString="Data Source=localhost;Initial Catalog=MarketingDept;Integrated Security=True;TrustServerCertificate=True"
             providerName="System.Data.SqlClient" />
+        <add name="DB.Properties.Settings.MarketingDBConnectionString"
+            connectionString="Data Source=localhost;Initial Catalog=MarketingDB;Integrated Security=True;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
